--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dropzone-s3-uploader": "^1.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-star-rating-component": "^1.4.1",
     "s3-uploader-react": "^0.1.4-alpha"
   },
   "scripts": {
