--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.4.1",
     "react-dropzone": "^4.2.11",
     "react-dropzone-s3-uploader": "^1.1.0",
+    "react-responsive-modal": "^3.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-star-rating-component": "^1.4.1",
