--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "mysql2": "^1.5.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-dropzone-s3-uploader": "^1.1.0",
     "react-scripts": "1.1.4",
     "sequelize": "^4.37.10",
     "sequelize-cli": "^4.0.0"
