--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "mysql2": "^1.5.3",
+    "passport": "^0.4.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-dropzone-s3-uploader": "^1.1.0",
