--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.3",
+    "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-dropzone-s3-uploader": "^1.1.0",
     "react-scripts": "1.1.4",
-    "sequelize": "^4.37.10",
+    "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0"
   },
   "scripts": {
