--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "name": "project3",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "private": true,
+  "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && yarn install;",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0"
+  },
+
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "express": "^4.16.3",
@@ -14,12 +32,10 @@
     "react-dropzone-s3-uploader": "^1.1.0",
     "react-scripts": "1.1.4",
     "sequelize": "^4.38.0",
-    "sequelize-cli": "^4.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "sequelize-cli": "^4.0.0",
+    "if-env": "^1.0.4",
+    "body-parser": "^1.17.2"
   }
+
+
 }
