--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": "ComputerNerd1",
+    "password": "Tricia615",
     "database": "owners_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "Tricia615",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
+    "password": "Tricia615",
     "database": "database_production",
     "host": "127.0.0.1",
     "use_env_variable": "JAWSDB_URL",
