--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.2.0",
     "mdbreact": "^4.5.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-dropzone": "^4.2.11",
     "react-dropzone-s3-uploader": "^1.1.0",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-responsive-modal": "^3.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
