--- a/package.json
+++ b/package.json
@@ -19,23 +19,21 @@
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0"
   },
-
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "if-env": "^1.0.4",
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-dropzone-s3-uploader": "^1.1.0",
+    "react-resize-image": "^1.0.4",
     "react-scripts": "1.1.4",
     "sequelize": "^4.38.0",
-    "sequelize-cli": "^4.0.0",
-    "if-env": "^1.0.4",
-    "body-parser": "^1.17.2"
+    "sequelize-cli": "^4.0.0"
   }
-
-
 }
