--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-firebase-file-uploader": "^2.4.2",
     "react-resize-image": "^1.0.4",
     "react-scripts": "1.1.4",
+    "react-select": "^1.2.1",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0"
   }
