updated config file

--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "mqxdh9kyrs3ngmy1",
+    "password": "hgqa1edcqv9ii4hk",
+    "database": "q2uinfp6ryqgsub7",
+    "host": "jsftj8ez0cevjz8v.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
