--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
 
-    "password": "ComputerNerd1",
+    "password": "Tricia615",
 
     "database": "owners_db",
     "host": "127.0.0.1",
