--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.15.6",
     "firebase": "^5.2.0",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.3.0",
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
