--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "firebase": "^5.2.0",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.3.0",
+    "jwt-simple": "^0.5.1",
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
