--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "react-dropzone": "^4.2.11",
     "react-dropzone-s3-uploader": "^1.1.0",
     "react-firebase-file-uploader": "^2.4.2",
+    "react-redux": "^5.0.7",
     "react-resize-image": "^1.0.4",
     "react-responsive-modal": "^3.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-star-rating-component": "^1.4.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "s3-uploader-react": "^0.1.4-alpha"
   },
   "scripts": {
