--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "downshift": "^2.0.10",
     "firebase": "^5.2.0",
+    "jwt-decode": "^2.2.0",
     "mdbreact": "^4.5.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
