--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-resize-image": "^1.0.4",
     "react-scripts": "1.1.4",
     "react-select": "^1.2.1",
+    "react-validation": "^3.0.7",
+    "react-validator": "^0.1.0",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0"
   }
