--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
     "downshift": "^2.0.10",
     "express": "^4.16.3",
