--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.4.0",
     "react-dropzone-s3-uploader": "^1.1.0",
     "react-firebase-file-uploader": "^2.4.2",
+    "react-protected-mailto": "^1.0.3",
     "react-resize-image": "^1.0.4",
     "react-scripts": "1.1.4",
     "react-select": "^1.2.1",
