--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "@pusher/chatkit": "^0.7.16",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "downshift": "^2.0.10",
