--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "classnames": "^2.2.5",
+    "jwt-decode": "^2.2.0",
+    "react-redux": "^5.0.7",
     "axios": "^0.18.0",
     "downshift": "^2.0.10",
     "firebase": "^5.2.0",
@@ -21,6 +24,8 @@
     "react-scripts": "1.1.4",
     "react-star-rating-component": "^1.4.1",
     "react-validation": "^3.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "s3-uploader-react": "^0.1.4-alpha"
   },
   "scripts": {
